# fedcsuatlas

./: DataFabricDeployment.md  README.md
clients/: README.md  dataclients-0.1-py3-none-any.whl  setup.cfg
clients/src/dataclients/: __init__.py
clients/src/dataclients/atlas/: __init__.py
clients/src/dataclients/session_clients/: model.py  queryclients.py
clients/tests/: test_atlas_clients.py
docs/: Mission Data Fabric - IL6.vsdx
helm/: README.md
hub/helm/: Dockerfile  README.md
hub/python/clients/src/dataclients/atlas/: atlasclient.py
hub/python/ingest/atlas/: create_type.py
ingest/binary/: load-bin-hash.py  load-bin-metadata.py
ingest/hive/: hive_query.py
ingest/spark/: job.py  spark_job.py  spark_query.py
python/clients/src/dataclients/: __version__.py
python/clients/src/dataclients/session_clients/: __init__.py
python/ingest/atlas/: parse_metadata.py  search.py
python/ingest/hive/: hive_config.ini
python/ingest/spark/: spark_config.ini
