[metadata]
name = dataclients
version = 0.1
author = jdodson-msft
description = Interact with data warehouse APIs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    apache-atlas
include_package_data = False

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
testpaths =
    tests
